* Base PublicWork list structure * Adapter and Delegates creation * Creation of navigation action * ViewModel for PublicWork list implemented * PublicWork repository with mocked data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
 
     <string name="title_login_email">EMAIL</string>
     <string name="title_login_password">SENHA</string>
+    <string name="title_public_work_list">Lista de obras</string>
+
     <string name="hint_login_email">Entre um email válido</string>
     <string name="hint_login_password">Digite sua senha …</string>
 
     <string name="button_login">Entrar</string>
+
+
 </resources>
