* Add mocked data to LocalPublicWorkDataSource * Implementation of BottomNavigation * Add icons to the project * Create navigation graph for bottom navigation * Setup first draft of screens for main navigation flow * Implementation of listeners in the adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,19 @@
     <string name="title_login_email">EMAIL</string>
     <string name="title_login_password">SENHA</string>
     <string name="title_public_work_list">Lista de obras</string>
+    <string name="title_public_work_filter">Filtros</string>
+    <string name="title_public_work_add">Adicionar</string>
+    <string name="title_public_work_edit">Editar</string>
 
     <string name="hint_login_email">Entre um email válido</string>
     <string name="hint_login_password">Digite sua senha …</string>
 
     <string name="button_login">Entrar</string>
 
+    <string name="menu_search">Pesquisar</string>
+    <string name="menu_filter">Filtrar</string>
+    <string name="menu_sent">Enviar</string>
+    <string name="menu_add">Adicionar</string>
+    <string name="menu_list">Lista de Obras</string>
 
 </resources>
