* Add public work to database working * Created screen to download necessary files from the server * Create repository for type work and configuration files * Creation of missing fragments * Add new graph destinations for each screen * Creation of missing view models for contexts * Add lottie to project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="label_city">Cidade</string>
 
     <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
+    <string name="text_loading">Carregando …</string>
 
 
 </resources>
