--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_public_work_add">Adicionar obra</string>
     <string name="title_public_work_edit">Editar obra</string>
     <string name="title_public_work_send">Enviar</string>
+    <string name="title_add_photo">Adicionar mais fotos</string>
 
     <string name="hint_login_email">Entre um email válido</string>
     <string name="hint_login_password">Digite sua senha …</string>
@@ -14,6 +15,7 @@
     <string name="button_edit">Editar</string>
     <string name="button_add_comment">Adicionar comentário</string>
     <string name="button_add_photo">Adicionar foto</string>
+    <string name="button_confirm_photo">Confirmar foto</string>
 
     <string name="menu_search">Pesquisar</string>
     <string name="menu_filter">Filtrar</string>
