--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,10 @@
     <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
     <string name="text_loading">Carregando …</string>
 
+    <string name="dialog_type_photo_title">Escolha o tipo da foto para adicionar</string>
+
+    <string name="snackbar_photo_add_success">Foto atualizada com sucesso</string>
+    <string name="snackbar_photo_add_canceled">Usuário cancelou ação</string>
+
 
 </resources>
