--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MPApp</string>
 
     <string name="title_public_work_list">Lista de obras</string>
-    <string name="title_public_work_filter">Filtros</string>
+    <string name="title_public_work_filter">Filtrar</string>
     <string name="title_public_work_add">Adicionar obra</string>
     <string name="title_public_work_edit">Editar obra</string>
     <string name="title_public_work_send">Enviar</string>
@@ -37,7 +37,18 @@
     <string name="label_number">Número</string>
     <string name="label_neighborhood">Bairro</string>
     <string name="label_city">Cidade</string>
-    <string name="label_loading_address">Carregando endereço …</string>
+    <string name="label_order_by">Ordenar por</string>
+    <string name="label_search_address">Clique para buscar endereço</string>
+    <string name="label_loading_address">Buscando endereço</string>
+    <string name="lavel_public_work_state">Estado dos dados das obras</string>
+
+    <string name="radio_order_by_name_a_z">Ordem alfabética (A-Z)</string>
+    <string name="radio_order_by_name_z_a">Ordem alfabética (Z-A)</string>
+    <string name="radio_order_by_name_distance">Distância da obra</string>
+
+    <string name="checkbox_complete">Completos</string>
+    <string name="checkbox_sent">Enviados</string>
+    <string name="checkbox_incomplete_not_sent">Incompletos e não enviados</string>
 
     <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
     <string name="text_loading">Carregando …</string>
