--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">eFiscaliza</string>
+    <string name="app_name">TRENA</string>
 
     <string name="title_public_work_list">Lista de obras</string>
     <string name="title_public_work_filter">Filtrar</string>
@@ -14,7 +14,7 @@
 
     <string name="button_login">Entrar</string>
     <string name="button_edit">Editar</string>
-    <string name="button_add_comment">Adicionar comentário</string>
+    <string name="button_add_comment">Adicionar/alterar comentário</string>
     <string name="button_add_photo">Adicionar foto</string>
     <string name="button_confirm_photo">Confirmar foto</string>
     <string name="button_add">Adicionar</string>
@@ -52,14 +52,14 @@
     <string name="label_add_comment_hint">Adicionar comentário …</string>
     <string name="label_default_distance">-- m</string>
     <string name="label_if_prefer">se preferir</string>
+    <string name="lable_public_work_comments">Comentário da obra</string>
 
     <string name="radio_order_by_name_a_z">Ordem alfabética (A-Z)</string>
     <string name="radio_order_by_name_z_a">Ordem alfabética (Z-A)</string>
     <string name="radio_order_by_name_distance">Distância da obra</string>
 
-    <string name="checkbox_complete">Coletados</string>
-    <string name="checkbox_sent">Enviados</string>
-    <string name="checkbox_incomplete_not_sent">Incompletos e não enviados</string>
+    <string name="checkbox_complete">Coleta para enviar</string>
+    <string name="checkbox_sent">Informações para atualizar</string>
 
     <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
     <string name="text_loading">Carregando …</string>
