--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="menu_send">Enviar</string>
     <string name="menu_add">Adicionar</string>
     <string name="menu_list">Lista de Obras</string>
+    <string name="menu_home">Home</string>
 
     <string name="label_email">Email</string>
     <string name="label_password">Senha</string>
