Add sentry environment and enable https for temporary backend. Add logout button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="home_option_new">Adicionar nova obra</string>
     <string name="home_option_send">Enviar dados</string>
     <string name="home_option_help">Ajuda</string>
+    <string name="home_option_exit">Sair</string>
 
     <string name="message_collect_updated">Coleta atualizada</string>
 
