--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="label_click_to_select_type_of_work">Clique para selecionar tipo de obra …</string>
     <string name="label_loading_address">Buscando endereço</string>
     <string name="lavel_public_work_state">Estado dos dados das obras</string>
-    <string name="label_add_comment_hint">Adicionar comentário …</string>
+    <string name="label_add_comment_hint">Adicionar comentário da foto…</string>
     <string name="label_default_distance">-- m</string>
     <string name="label_if_prefer">se preferir</string>
     <string name="lable_public_work_comments">Comentário da obra</string>
@@ -65,7 +65,8 @@
 
     <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
     <string name="text_empty_collect_list">Lista de obras para enviar vazia, tente realizar coletas ou atualizar informações das obras</string>
-    <string name="text_welcome">Bem vindo ao TRENA, o aplicativo de fiscalização do Ministério Público de Minas Gerais</string>
+    <string name="text_welcome">Bem-vindo ao TRENA, o aplicativo de fiscalização de obras do Ministério Público do Estado de Minas Gerais</string>
+    <string name="text_loading_login">Realizando login …</string>
 
     <string name="text_loading">Carregando …</string>
     <string name="text_move_map">Mova o mapa para selecionar a localização da obra.</string>
@@ -103,6 +104,6 @@
     <string name="home_option_help">Ajuda</string>
     <string name="home_option_exit">Sair</string>
 
-    <string name="message_collect_updated">Coleta atualizada</string>
+    <string name="message_collect_updated">Informações atualizadas</string>
 
 </resources>
