* Refactor repository and sync worker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,16 +101,10 @@
     <string name="progress_success_upload">Dados enviados com sucesso!</string>
     <string name="progress_fail_upload">Erro ao enviar dados para o servidor :(</string>
     <string name="progress_running_upload">Dados sendo enviados</string>
-    <string name="progress_check_type_work_version">Verificando versão dos tipos de obras</string>
-    <string name="progress_check_public_work_version">Verificando versão da lista de obras</string>
-    <string name="progress_check_type_photo_version">Verificando versão dos tipos de fotos</string>
-    <string name="progress_update_type_work">Atualizando tipos de obras</string>
-    <string name="progress_update_public_work">Atualizando lista de obras</string>
-    <string name="progress_update_type_photo">Atualizando tipos de fotos</string>
+    <string name="progress_check_version">Verificando versão: %s</string>
+    <string name="progress_update">Atualizando: %s</string>
+    <string name="progress_fail_download">Falha ao baixar: %s</string>
     <string name="progress_fail_server">Falha ao comunicar com o servidor</string>
-    <string name="progress_fail_download_type_works">Falha ao baixar tipos de obras</string>
-    <string name="progress_fail_download_public_work">Falha ao baixar lista de obras</string>]
-    <string name="progress_fail_download_type_photo">Falha ao baixar lista de tipos de fotos</string>
     <string name="progress_starting_download_data">Iniciando atualização de dados</string>
     <string name="progress_download_failed_try_again">Falha ao atualizar os dados, tentar novamente?</string>
 
@@ -121,5 +115,11 @@
     <string name="home_option_exit">Sair</string>
 
     <string name="message_collect_updated">Informações atualizadas</string>
+
+    <string name="progress_type_work">tipos de obras</string>
+    <string name="progress_association">relacionamentos</string>
+    <string name="progress_public_work">obras públicas</string>
+    <string name="progress_type_photo">tipos de fotos</string>
+
 
 </resources>
