--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="dialog_type_photo_title">Selecionar o tipo da foto</string>
     <string name="dialog_type_work_title">Selecionar o tipo da obra</string>
     <string name="dialog_type_work_filter_title">Selecionar o tipo das obras</string>
+    <string name="dialog_work_status">Selecionar status da obra</string>
 
     <string name="snackbar_photo_add_success">Foto atualizada com sucesso</string>
     <string name="snackbar_photo_add_canceled">Usuário cancelou ação</string>
