--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="button_continue">Continuar</string>
     <string name="button_try_again">Tentar novamente</string>
     <string name="button_create_account">Cadastrar</string>
+    <string name="button_cancel_collect">Cancelar coleta</string>
 
     <string name="menu_search">Pesquisar</string>
     <string name="menu_filter">Filtrar</string>
@@ -71,7 +72,7 @@
     <string name="checkbox_sent">Informações para atualizar</string>
 
     <string name="text_empty_public_work_list">Lista de obras vazia, tente adicionar uma nova obra manualmente.</string>
-    <string name="text_empty_collect_list">Lista de obras para enviar vazia, tente realizar coletas ou atualizar informações das obras</string>
+    <string name="text_empty_collect_list">Lista de fotos para enviar vazia, tente realizar coletas ou atualizar informações das obras</string>
     <string name="text_welcome">Bem-vindo ao TRENA, o aplicativo de fiscalização de obras do Ministério Público do Estado de Minas Gerais</string>
     <string name="text_loading_login">Realizando login …</string>
     <string name="text_click_to_photo">Clique para adicionar foto</string>
@@ -85,6 +86,10 @@
     <string name="dialog_type_work_title">Selecionar o tipo da obra</string>
     <string name="dialog_type_work_filter_title">Selecionar o tipo das obras</string>
     <string name="dialog_work_status">Selecionar status da obra</string>
+    <string name="dialog_delete_collect">Deletar coleta</string>
+    <string name="dialog_delete_collect_message">A coleta deletada não podera ser restaurada, deseja continuar?</string>
+    <string name="dialog_delete_photo">Deletar foto</string>
+    <string name="dialog_delete_photo_message">A foto deletada não podera ser restaurada, deseja continuar?</string>
 
     <string name="snackbar_photo_add_success">Foto atualizada com sucesso</string>
     <string name="snackbar_photo_add_canceled">Usuário cancelou ação</string>
