Error handling, registration screen, maps and beginning of login configuration with MP. Change of inspection flow to works screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,8 @@
     <string name="menu_map">Mapa</string>
     <string name="menu_send">Enviar</string>
     <string name="menu_add">Adicionar</string>
-    <string name="menu_list">Lista</string>
+    <string name="menu_list">Obras</string>
+    <string name="menu_survey">Vistorias</string>
     <string name="menu_home">Home</string>
 
     <string name="label_email">Email</string>
