--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="progress_type_work">tipos de obras</string>
     <string name="progress_association">relacionamentos</string>
     <string name="progress_public_work">obras públicas</string>
+    <string name="progress_inspection">vistorias</string>
     <string name="progress_type_photo">tipos de fotos</string>
     <string name="progress_work_status">status de obras</string>
     <string name="progress_city">cidades</string>
@@ -164,6 +165,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="first_fragment_label">Hello blank fragment</string>
+    <string name="second_fragment_label">Hello blank fragment</string>
 
 
 
